--- a/app/src/main/res/layout/activity_add_teams.xml
+++ b/app/src/main/res/layout/activity_add_teams.xml
@@ -79,7 +79,9 @@
 
    <TextView
        android:layout_width="wrap_content"
-       android:layout_height="wrap_content" />
+       android:layout_height="wrap_content"
+       android:text="Team Name"
+       />
 
 
 </RelativeLayout>
