--- a/app/src/main/res/layout/activity_add_teams.xml
+++ b/app/src/main/res/layout/activity_add_teams.xml
@@ -81,6 +81,7 @@
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Team Name"
+       android:layout_below="@id/TopHorizontalLine"
        />
 
 
