--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,7 +38,7 @@
                     android:id="@+id/title"
                     android:layout_marginTop="10dp"
                     android:layout_toRightOf="@id/mainimage"
-                    android:textColor="#458AFC"
+                    android:textColor="@color/colorOCSblue"
                     android:textSize="20sp"
                     />
                 <ImageView
@@ -57,12 +57,19 @@
 
 
     </Toolbar>
+    <View
+        android:layout_centerInParent="true"
+        android:layout_below="@id/topPanel"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:id="@+id/TopHorizontalLine"
+        android:background="#dedede"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_below="@id/topPanel"
+        android:layout_below="@id/TopHorizontalLine"
         >
 
 
