--- a/app/src/main/res/layout/mainpagelistviewlayout.xml
+++ b/app/src/main/res/layout/mainpagelistviewlayout.xml
@@ -13,7 +13,7 @@
     >
 <ImageView
     android:layout_width="30dp"
-    android:layout_height="30dp"
+    android:layout_height="29dp"
     android:id="@+id/leftflag"
     android:layout_marginTop="17dp"
     android:layout_alignParentTop="true"
@@ -44,6 +44,7 @@
            android:text="T-20"
            android:id="@+id/MatchTypetextview"
            android:textStyle="bold"
+           android:textColor="@color/colorOCSred"
            android:layout_marginTop="5dp"
 
            />
@@ -53,6 +54,7 @@
            android:layout_height="wrap_content"
            android:text="vs"
            android:layout_marginLeft="7dp"
+           android:textColor="@color/colorOCSredlight"
            android:textSize="13sp"
            />
 
@@ -73,7 +75,7 @@
 
     <ImageView
         android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_height="29dp"
         android:id="@+id/rightflag"
         android:layout_marginTop="17dp"
         android:layout_alignParentRight="true"
@@ -125,6 +127,7 @@
                 android:layout_marginLeft="19dp"
                 android:text="210/5"
                 android:textSize="20dp"
+                android:textColor="@color/colorOCSred"
                 android:textStyle="bold"
 
 
@@ -134,28 +137,30 @@
 
 
         <LinearLayout
+            android:id="@+id/leftsidedetailLL"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:id="@+id/leftsidedetailLL"
             android:layout_alignParentLeft="true"
-
             android:layout_marginLeft="10dp"
+
             android:layout_marginTop="6dp"
-            >
+            android:orientation="vertical">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="12dp"
                 android:text="Inning"
+                android:textSize="12dp"
+
                 />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="10dp"
-                android:text="2nd"
                 android:layout_marginLeft="6dp"
-                />
+                android:text="2nd"
+                android:textColor="@color/colorOCSbluelight"
+                android:textSize="10dp" />
 
         </LinearLayout>
 
@@ -188,6 +193,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="10dp"
                 android:text="250"
+                android:textColor="@color/colorOCSbluelight"
                 android:layout_marginLeft="6dp"
                 />
 
@@ -225,6 +231,7 @@
                 android:id="@+id/Overtextview"
                 android:textSize="10dp"
                 android:text="14.6"
+                android:textColor="@color/colorOCSbluelight"
                 android:layout_marginLeft="4dp"
                 />
         </LinearLayout>
@@ -259,6 +266,7 @@
                 android:textSize="10dp"
                 android:text="6.3"
                 android:layout_marginLeft="1dp"
+                android:textColor="@color/colorOCSbluelight"
                 />
         </LinearLayout>
 
