--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,7 @@
         android:id="@+id/topPanel"
         android:layout_width="match_parent"
         android:layout_height="53dp"
+        android:layout_marginBottom="11dp"
         android:layout_alignParentTop="true"
 
         >
@@ -30,17 +31,31 @@
                     android:layout_height="match_parent"
                     android:src="@drawable/scorecardimgicon"
                     />
-                <TextView
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Online Score Card
-"
-                    android:id="@+id/title"
-                    android:layout_marginTop="10dp"
+                    android:orientation="vertical"
                     android:layout_toRightOf="@id/mainimage"
-                    android:textColor="@color/colorOCSblue"
-                    android:textSize="20sp"
-                    />
+                    android:layout_marginTop="10dp"
+                    >
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Online Score Card"
+                        android:id="@+id/title"
+
+                        android:textColor="#0008ff"
+                        android:textSize="20sp"
+                        />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Add Team"
+                        android:textSize="15sp"
+                        android:textColor="@color/colorOCSredlight"
+                        />
+
+                </LinearLayout>
                 <ImageView
                     android:layout_width="50dp"
                     android:layout_height="23dp"
