--- a/app/src/main/res/layout/activity_add_player_detail.xml
+++ b/app/src/main/res/layout/activity_add_player_detail.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".AddPlayerDetail"
     android:background="#fff"
+
     >
 
     <Toolbar
@@ -15,10 +16,12 @@
         android:layout_marginBottom="11dp"
         android:layout_alignParentTop="true"
 
+
         >
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+
 
             >
 
@@ -49,7 +52,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Add Team"
+                    android:text="Add Player Details"
                     android:textSize="15sp"
                     android:textColor="@color/colorOCSredlight"
                     />
@@ -76,7 +79,159 @@
         android:layout_below="@id/topPanel"
         android:layout_width="match_parent"
         android:layout_height="1dp"
+
         android:id="@+id/TopHorizontalLine"
         android:background="#dedede"/>
 
-</RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/TopHorizontalLine"
+        android:background="?android:colorBackground"
+        >
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#fff"
+            android:layout_marginTop="10dp"
+            android:orientation="vertical"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="12dp"
+            android:layout_marginRight="12dp"
+            >
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/LL1"
+                android:orientation="horizontal"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="5dp"
+
+                android:layout_alignParentLeft="true"
+
+
+                >
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Player Name"
+                    android:layout_marginBottom="3dp"
+                    android:textSize="15sp"
+                    />
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Player Name"
+                    android:layout_marginLeft="7dp"
+                    android:layout_marginRight="5dp"
+                    />
+
+
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/LL2"
+                android:orientation="horizontal"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:layout_marginBottom="5dp"
+                android:layout_below="@id/LL1"
+
+                >
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Player DOB"
+                    android:layout_marginBottom="3dp"
+                    android:textSize="15sp"
+                    />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Select Date"
+                    android:id="@+id/SelectDateTv"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginLeft="21dp"
+                    android:textSize="15sp"
+                    />
+
+
+
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/LL3"
+                android:orientation="horizontal"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:layout_below="@id/LL2"
+
+                >
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Player Type"
+                    android:layout_marginBottom="3dp"
+                    android:textSize="15sp"
+                    />
+               <Spinner
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:id="@+id/PlayerTypeSpinner"
+                   android:entries="@array/PlayerTypes"
+                   android:layout_marginLeft="12dp"
+                   android:layout_marginRight="5dp"
+                   />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/LL4"
+                android:orientation="horizontal"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:layout_below="@id/LL3"
+
+                >
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Bowler Type"
+                    android:layout_marginBottom="3dp"
+                    android:textSize="15sp"
+                    />
+                <Spinner
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/BowlerTypeSpinner"
+                    android:entries="@array/BowlingTypes"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginRight="5dp"
+                    />
+            </LinearLayout>
+
+
+
+
+        </RelativeLayout>
+
+
+
+    </RelativeLayout>
+
+
+    </RelativeLayout>
+
+
+
