--- a/app/src/main/res/layout/activity_add_player_detail.xml
+++ b/app/src/main/res/layout/activity_add_player_detail.xml
@@ -174,6 +174,7 @@
                 android:orientation="horizontal"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
+                android:layout_marginBottom="5dp"
                 android:layout_below="@id/LL2"
 
                 >
@@ -220,6 +221,28 @@
                     android:layout_marginRight="5dp"
                     />
             </LinearLayout>
+
+           <TextView
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:id="@+id/AssignTeamTv"
+               android:layout_marginTop="16dp"
+               android:layout_centerInParent="true"
+               android:layout_below="@id/LL4"
+               android:textSize="15sp"
+               android:text="Assign Team"
+               />
+            <Spinner
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/AssignTeamSpinner"
+                android:layout_marginTop="5dp"
+                android:entries="@array/AssignTeams"
+                android:layout_below="@id/AssignTeamTv"
+                android:layout_centerInParent="true"
+                />
+
+
 
 
 
